force-app/main/default/objects/Event_Notification__c.object
<CustomObject>
    <label>Event Notification</label>
    <nameField>
        <label>Event</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remark</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Event Notification</relationshipLabel>
        <relationshipName>Event_Notification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Account_Info__c</fullName>
        <label>Private Customer Information</label>
        <referenceTo>Private_Customer_Information__c</referenceTo>
        <relationshipLabel>Event Notification</relationshipLabel>
        <relationshipName>Event_Notification</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Event_Notification_External_Key__c</fullName>
        <externalId>true</externalId>
        <label>Event Notification External Key</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Date__c</columns>
        <columns>Remark__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Transaction_Reminder</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Date__c</columns>
        <columns>Remark__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>EWS Alert</value>
        </filters>
        <label>Transaction Reminder</label>
    </listViews>
    <listViews>
        <fullName>Abnormal_Key_Indicators</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Date__c</columns>
        <columns>Remark__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>EWS Alert</value>
        </filters>
        <label>Abnormal Key Indicators</label>
    </listViews>
</CustomObject>